--- a/configuration.yaml
+++ b/configuration.yaml
@@ -7,6 +7,7 @@ homeassistant:
 # Configure a default setup of Home Assistant (frontend, api, etc)
 # default_config:
 automation: !include includes/automations.yaml
+cloud: !include includes/cloud.yaml
 config:
 frontend:
   themes: !include_dir_merge_named themes
@@ -19,6 +20,8 @@ script: !include includes/scripts.yaml
 ssdp:
 sun:
 system_health:
+system_log:
+  fire_event: true
 updater:
 zeroconf:
 
@@ -38,7 +41,6 @@ timer: !include includes/timer.yaml
 weather: !include includes/weather.yaml
 zone: !include includes/zone.yaml
 
-  
 # Uncomment this if you are using SSL/TLS, running in Docker container, etc.
 http:
   base_url: !secret base_url
