--- a/includes/devicetracker.yaml
+++ b/includes/devicetracker.yaml
@@ -2,4 +2,10 @@
   interval_seconds: 15
   consider_home: 150
   track_new_devices: yes
+  
+#- platform: icloud3
+#  username: !secret ic3_username 
+#  password: !secret ic3_password
+#  track_devices:
+#    - rogers_iphone > roger@selwyn.org.uk
     
