--- a/configuration.yaml
+++ b/configuration.yaml
@@ -7,7 +7,7 @@ homeassistant:
 # Configure a default setup of Home Assistant (frontend, api, etc)
 # default_config:
 automation: !include includes/automations.yaml
-cloud: !include includes/cloud.yaml
+#cloud: !include includes/cloud.yaml
 config:
 frontend:
   themes: !include_dir_merge_named themes
@@ -21,7 +21,7 @@ ssdp:
 sun:
 system_health:
 system_log:
-  fire_event: true
+#  fire_event: true
 updater:
 zeroconf:
 
@@ -81,11 +81,12 @@ logger:
     homeassistant.loader: error
 
 mqtt:
-  broker: a0d7b954-mqtt
+  broker: core-mosquitto
+  client_id: home-assistant
+  discovery: False
   username: !secret mqtt_username
   password: !secret mqtt_password
-  client_id: home-assistant
-  
+
 remote_homeassistant:
   instances:
   - host: !secret remote_tc_host
@@ -94,6 +95,9 @@ remote_homeassistant:
     verify_ssl: false
     access_token: !secret remote_tc_token
     entity_prefix: "tyrcelyn_"
+    exclude:
+      domains:
+      - persistent_notification
     include:
       entities:
       - binary_sensor.presence_all
