--- a/includes/sensor.yaml
+++ b/includes/sensor.yaml
@@ -37,19 +37,24 @@
       value_template: "{{ '%.0f'%(state_attr('sensor.room_sensor_20', 'state').luminance | float) }}"
       friendly_name: 'Living Room Genius Illuminance' 
       unit_of_measurement: 'lux'
+      device_class: illuminance
     geniushub_kitchen_luminance:
       value_template: "{{ '%.0f'%(state_attr('sensor.room_sensor_19', 'state').luminance | float) }}"
       friendly_name: 'Kitchen Genius Illuminance' 
       unit_of_measurement: 'lux'
+      device_class: illuminance
     geniushub_bedroom1_luminance:
       value_template: "{{ '%.0f'%(state_attr('sensor.room_sensor_30', 'state').luminance | float) }}"
       friendly_name: 'Bedroom 1 Genius Illuminance' 
       unit_of_measurement: 'lux'
+      device_class: illuminance
     geniushub_bedroom2_luminance:
       value_template: "{{ '%.0f'%(state_attr('sensor.room_sensor_21', 'state').luminance | float) }}"
       friendly_name: 'Bedroom 2 Genius Illuminance' 
       unit_of_measurement: 'lux'
+      device_class: illuminance
     geniushub_bedroom3_luminance:
       value_template: "{{ '%.0f'%(state_attr('sensor.room_sensor_22', 'state').luminance | float) }}"
       friendly_name: 'Bedroom 3 Genius Illuminance' 
       unit_of_measurement: 'lux'
+      device_class: illuminance
