--- a/includes/sensor.yaml
+++ b/includes/sensor.yaml
@@ -1,3 +1,4 @@
+- platform: websocket_api
 - platform: systemmonitor
   resources:
     - type: processor_use
@@ -62,3 +63,4 @@
       friendly_name: 'Bedroom 3 Genius Illuminance' 
       unit_of_measurement: 'lux'
       device_class: illuminance
+
