--- a/includes/devicetracker.yaml
+++ b/includes/devicetracker.yaml
@@ -1,7 +1,7 @@
-- platform: bluetooth_tracker
-  interval_seconds: 15
-  consider_home: 150
-  track_new_devices: yes
+# - platform: bluetooth_tracker
+#   interval_seconds: 15
+#   consider_home: 150
+#   track_new_devices: yes
   
 #- platform: icloud3
 #  username: !secret ic3_username 
