--- a/configuration.yaml
+++ b/configuration.yaml
@@ -33,6 +33,7 @@ input_select: !include includes/inputselect.yaml
 logger: !include includes/logger.yaml
 media_player: !include includes/mediaplayer.yaml
 notify: !include includes/notify.yaml
+# ptvsd:
 scene: !include includes/scenes.yaml
 sensor: !include includes/sensor.yaml
 timer: !include includes/timer.yaml
