--- a/includes/mqtt.yaml
+++ b/includes/mqtt.yaml
@@ -1,5 +1,6 @@
 broker: core-mosquitto
 client_id: home-assistant
-discovery: False
+discovery: True
+discovery_prefix: homeassistant
 username: !secret mqtt_username
 password: !secret mqtt_password
