--- a/includes/binarysensor.yaml
+++ b/includes/binarysensor.yaml
@@ -44,33 +44,33 @@
     geniushub_living_room_occupancy:
       value_template: "{{ state_attr('climate.living_room', 'status').occupied == true }}"
       device_class: motion
-      friendly_name: 'Living Room Genius Occupancy' 
+      friendly_name: 'Living Room Genius Motion' 
     geniushub_kitchen_occupancy:
       value_template: "{{ state_attr('climate.kitchen', 'status').occupied == true }}"
       device_class: motion
-      friendly_name: 'Kitchen Genius Occupancy' 
+      friendly_name: 'Kitchen Genius Motion' 
     geniushub_bedroom1_occupancy:
       value_template: "{{ state_attr('climate.bedroom_1', 'status').occupied == true }}"
       device_class: motion
-      friendly_name: 'Bedroom 1 Genius Occupancy' 
+      friendly_name: 'Bedroom 1 Genius Motion' 
     geniushub_bedroom2_occupancy:
       value_template: "{{ state_attr('climate.bedroom_2', 'status').occupied == true }}"
       device_class: motion
-      friendly_name: 'Bedroom 2 Genius Occupancy' 
+      friendly_name: 'Bedroom 2 Genius Motion' 
     geniushub_bedroom3_occupancy:
       value_template: "{{ state_attr('climate.bedroom_3', 'status').occupied == true }}"
       device_class: motion
-      friendly_name: 'Bedroom 3 Genius Occupancy' 
+      friendly_name: 'Bedroom 3 Genius Motion' 
 
     living_room_occupancy:
       value_template: >-
-        {{ is_state('binary_sensor.living_room_fibaro_motion', 'on')
+        {{ is_state('binary_sensor.zwave_living_room_fibaro_motion', 'on')
         or state_attr('climate.living_room', 'status').occupied == true }}
       device_class: motion
-      friendly_name: 'Living Room Motion' 
+      friendly_name: 'Living Room Occupancy' 
     downstairs_occupancy:
       value_template: >-
-        {{ is_state('binary_sensor.living_room_fibaro_motion', 'on')
+        {{ is_state('binary_sensor.zwave_living_room_fibaro_motion', 'on')
         or state_attr('climate.living_room', 'status').occupied == true
         or state_attr('climate.kitchen', 'status').occupied == true }}
       device_class: motion
@@ -91,6 +91,13 @@
       friendly_name: "Internet"
       device_class: connectivity
       value_template: "{{ is_state('input_boolean.internet', 'on') }}"
+
+    zwave_living_room_fibaro_motion:
+      device_class: motion
+      friendly_name: Living Room Fibaro Motion
+      value_template: "{{ is_state('binary_sensor.fgms001_zw5_motion_sensor_home_security_motion_detected', 'on') }}"
+
+
 #- platform: ping
 #  name: hue
 #  host: !secret hue_host
