--- a/includes/http.yaml
+++ b/includes/http.yaml
@@ -1,8 +1,9 @@
-base_url: !secret base_url
-ssl_certificate: /ssl/fullchain.pem
-ssl_key: /ssl/privkey.pem
+# base_url: !secret base_url
+#ssl_certificate: /ssl/fullchain.pem
+#ssl_key: /ssl/privkey.pem
 server_port: !secret server_port
 ip_ban_enabled: true
 login_attempts_threshold: 5
 use_x_forwarded_for: true
-trusted_proxies: !secret asus_host
+trusted_proxies: 
+  - 172.30.33.4
