--- a/includes/logger.yaml
+++ b/includes/logger.yaml
@@ -2,7 +2,7 @@ default: warning
 logs:
 #  custom_components.braviatv_psk: debug
   NodeRed: debug
-  custom_components.skyq: warning
+  custom_components.skyq: debug
   custom_components.o365: info
   homeassistant.loader: error
 #  homeassistant.components.media_player: error
