--- a/includes/binarysensor.yaml
+++ b/includes/binarysensor.yaml
@@ -97,6 +97,15 @@
       friendly_name: Living Room Fibaro Motion
       value_template: "{{ is_state('binary_sensor.fgms001_zw5_motion_sensor_home_security_motion_detected', 'on') }}"
 
+    tyrcelyn_presence_all:
+      friendly_name: "TC - Presence - All"
+      device_class: presence
+      value_template: "{{ is_state('input_boolean.tyrcelyn_presence_all', 'on') }}"
+    tyrcelyn_presence_cleaner:
+      friendly_name: "TC - Presence - Cleaner"
+      device_class: presence
+      value_template: "{{ is_state('input_boolean.tyrcelyn_presence_cleaner', 'on') }}"
+
 
 #- platform: ping
 #  name: hue
