--- a/configuration.yaml
+++ b/configuration.yaml
@@ -5,7 +5,7 @@ homeassistant:
 frontend:
   themes: !include_dir_merge_named themes
       
-automation: !include includes/automations.yaml
+#automation: !include includes/automations.yaml
 #cloud: !include includes/cloud.yaml
 config:
 history: !include includes/history.yaml
