--- a/includes/history.yaml
+++ b/includes/history.yaml
@@ -6,7 +6,7 @@ include:
     - person.benjamin_selwyn
     - person.clare_selwyn
     - person.roger_selwyn
-    - person.robyn_winfield
+    - binary_sensor.front_door_motion
     - binary_sensor.downstairs_occupancy
     - binary_sensor.living_room_fibaro_motion
     - binary_sensor.zwave_living_room_fibaro_motion
@@ -15,14 +15,16 @@ include:
     - binary_sensor.dual_channel_receiver_3_2
     - group.main_light_actual
     - group.side_light_actual
+    - group.tv_light_actual
     - group.table_light_actual
     - group.bedroom_1_lights_actual
     - group.bedroom_2_lights_actual
     - group.bedroom_3_lights_actual
+    - group.office_lights_actual
     - binary_sensor.hue
     - binary_sensor.internet
-    - sensor.nest_protect_downstairs_smoke_detector
-    - sensor.nest_protect_upstairs_smoke_detector
+    - binary_sensor.upstairs
+    - binary_sensor.downstairs
     - sensor.geniushub_errors
     - sensor.geniushub_warnings
     - weather.home
@@ -30,13 +32,17 @@ include:
     - sun.sun
 
     - binary_sensor.tyrcelyn_presence_all
-    - binary_sensor.nest_presence_device_presence
-    - binary_sensor.tyrcelyn_presence_cleaner
+    - binary_sensor.home_occupied_tyr_celyn
+    - binary_sensor.tyrcelyn_utility_motion
     - calendar.bookings
+    - climate.tyr_celyn_thermostat
+    - sensor.tyr_celyn_thermostat_humidity
+#    - binary_sensor.nest_presence_device_presence
+#    - binary_sensor.home_occupied_workshop
+#    - binary_sensor.tyrcelyn_presence_cleaner
 #    - sensor.tc_current_temperature
 #    - sensor.tc_set_temperature
 #    - sensor.tc_hvac_action
-    - climate.nest_thermostat_living_room_tyr_celyn
 
 #    - sensor.cpu_temperature
     - sensor.memory_free
