Change to package structure

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -1,49 +1,2 @@
 homeassistant:
-  customize: !include includes/customize.yaml
-  customize_glob: !include includes/customizeglob.yaml
-
-frontend:
-  themes: !include_dir_merge_named themes
-      
-config:
-history: !include includes/history.yaml
-mobile_app:
-person:
-recorder: !include includes/recorder.yaml
-script: !include includes/scripts.yaml
-ssdp:
-sun:
-system_health:
-system_log:
-updater:
-zeroconf:
-
-# Non-default items added
-binary_sensor: !include includes/binarysensor.yaml
-camera: !include includes/camera.yaml
-climate: !include includes/climate.yaml
-device_tracker: !include includes/devicetracker.yaml
-group: !include includes/groups.yaml
-http: !include includes/http.yaml
-input_boolean: !include includes/inputboolean.yaml
-input_number: !include includes/inputnumber.yaml
-input_select: !include includes/inputselect.yaml
-ios: !include includes/ios.yaml
-logger: !include includes/logger.yaml
-media_player: !include includes/mediaplayer.yaml
-notify: !include includes/notify.yaml
-scene: !include includes/scenes.yaml
-sensor: !include includes/sensor.yaml
-switch: !include includes/switch.yaml
-timer: !include includes/timer.yaml
-tts: !include includes/tts.yaml
-weather: !include includes/weather.yaml
-zone: !include includes/zone.yaml
-
-# Device integrations
-asuswrt: !include includes/asuswrt.yaml
-geniushub: !include includes/geniushub.yaml
-nest: !include includes/nest.yaml
-#mqtt: !include includes/mqtt.yaml
-o365: !include includes/o365.yaml
-panel_iframe: !include includes/paneliframe.yaml
+  packages: !include_dir_named packages/ 
