--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 custom_components
 icloud
 image
+logs
 node-red
 ssh
 themes
@@ -17,7 +18,6 @@ __pycache__/
 # Ignore files
 .uuid
 home-assistant*
-*.csv
 update.sh
 
 Reinclude files
